[package]
name = "aqua-dht"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "aqua-dht"
path = "src/main.rs"

[dependencies]
fluence = "=0.6.4"
marine-sqlite-connector = "0.4.1"
fstrings = "0.2.3"
eyre = "0.6.5"

[dev-dependencies]
fluence-test = "0.1.7"
rusqlite = "0.25.1"
