[package]
name = "aqua-dht"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "aqua-dht"
path = "src/main.rs"

[dependencies]
fluence = "0.6.8"
marine-sqlite-connector = "0.4.1"
fstrings = "0.2.3"
eyre = "0.6.5"
boolinator = "2.4.0"
toml = "0.5.6"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
fluence-test = "0.1.9"
rusqlite = "0.25.1"
